--- a/markup/scss/_add-property-form.scss
+++ b/markup/scss/_add-property-form.scss
@@ -1,30 +1,3 @@
-$breakpoints: (
-  'xs-phone': 320px,
-  'phone': 376px,
-  'tablet': 768px,
-  'desktop': 1024px,
-  'widescreen': 1200px,
-  'tvscreen':1600px
-);
-
-// keywords
-$media-expressions: (
-  'screen': 'screen',
-  'print': 'print',
-  'handheld': 'handheld',
-  'landscape': '(orientation: landscape)',
-  'portrait': '(orientation: portrait)',
-  'retina2x': '(-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi)',
-  'retina3x': '(-webkit-min-device-pixel-ratio: 2.5), (min-resolution: 240dpi)'
-);
-
-@import 'vendors/include-media';
-
-@import 'base/variables';
-@import 'base/mixins';
-@import 'base/helpers';
-
-
 /*Add a property full form*/
 .addPropertyFormContainer {
 	transition: padding 0.5s ease;
@@ -915,6 +888,9 @@ $media-expressions: (
 				}
 				.picture-name {
 					pointer-events: inherit;
+				}
+				.file-uploader {
+					&:after{ display: none;}
 				}
 			}
 			
