--- a/markup/includes/add-property-form.html
+++ b/markup/includes/add-property-form.html
@@ -10,6 +10,7 @@
     </div>
     <form class="property-add" ng-submit="submitProperty()">
         <section class="basics-block" id="basics-block">
+            <span class="success-message successfuly-saved">Property Saved</span>
             <div class="errors">
                 <ul>
                     <li data-ng-repeat="error in errors">Owner is invalid</li>
