--- a/markup/scss/_add-property-form.scss
+++ b/markup/scss/_add-property-form.scss
@@ -28,6 +28,33 @@
 		}
 	}
 	
+	.success-message {
+		color: darken($green, 25%);
+		background: lighten($green, 20%);
+		border: 1px solid darken($green, 25%);
+		display: none !important;
+		@extend .text-center;
+		border-radius: 4px;
+		max-width: 300px;
+		margin: 0 auto;
+		overflow: hidden;
+		padding: 10px;
+		
+		&:before {
+			content: "\e903";
+			font-family: 'icomoon';
+			float: left;
+			border-right: 1px solid;
+			color: darken($green, 15%);
+			padding: 10px;
+			margin: -10px;
+		}
+		
+		&.successfuly-saved {
+			display: block !important;
+		}
+	}
+	
 	.please-wait & {
 		height: 100vh;
 		
@@ -720,8 +747,8 @@
 			
 			&:after{
 				position: absolute;	
-				top: -32px;
-				right: -32px;
+				top: -31px;
+				right: -31px;
 				border: 32px solid transparent;
 				border-bottom: 32px solid  $defualt-blue;
 				border-left: 0;
