--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -2024,16 +2024,16 @@ input[type='submit'] {
   vertical-align: top;
   position: relative;
   background: #133783;
-  padding: 6px 10px;
+  padding: 6px 50px 6px 10px;
 }
 
 .addPropertyFormContainer .form-heading span:after {
   position: absolute;
-  top: -31px;
-  right: -31px;
+  top: 0;
+  right: 0;
   border: 32px solid transparent;
-  border-bottom: 32px solid #133783;
-  border-left: 0;
+  border-top: 32px solid #fff;
+  border-right: 0;
   content: '';
 }
 
