--- a/markup/scss/_add-property-form.scss
+++ b/markup/scss/_add-property-form.scss
@@ -743,15 +743,15 @@
 			@include align(top);
 			position: relative;
 			background: $defualt-blue;
-			padding: 6px 10px;
+			padding:6px 50px 6px 10px;
 			
 			&:after{
 				position: absolute;	
-				top: -31px;
-				right: -31px;
+				top: 0;
+				right: 0;
 				border: 32px solid transparent;
-				border-bottom: 32px solid  $defualt-blue;
-				border-left: 0;
+				border-top: 32px solid $white;
+				border-right: 0;
 				content: '';
 			}
 			
