--- a/markup/includes/property-listing.html
+++ b/markup/includes/property-listing.html
@@ -105,7 +105,7 @@
                     <div class="t-head by-view"><span class="descending">Views</span></div>
                     <div class="t-head"><span class="descending">Controls</span></div>
                 </li>
-                <li>
+                <li class="accordion-row">
                     <div class="t-data by-id">
                         <input type="checkbox">
                         <label for="id1">2806770 </label>
@@ -141,7 +141,7 @@
                         <a class="btn-more">View more</a>
                     </div>
                 </li>
-                <li>
+                <li class="accordion-row">
                     <div class="t-data by-id">
                         <input type="checkbox">
                         <label for="id1">2806770 </label>
@@ -177,7 +177,7 @@
                         <a class="btn-more">View more</a>
                     </div>
                 </li>
-                <li>
+                <li class="accordion-row">
                     <div class="t-data by-id">
                         <input type="checkbox">
                         <label for="id1">2806770 </label>
@@ -213,7 +213,7 @@
                         <a class="btn-more">View more</a>
                     </div>
                 </li>
-                <li>
+                <li class="accordion-row">
                     <div class="t-data by-id">
                         <input type="checkbox">
                         <label for="id1">2806770 </label>
@@ -249,7 +249,7 @@
                         <a class="btn-more">View more</a>
                     </div>
                 </li>
-                <li>
+                <li class="accordion-row">
                     <div class="t-data by-id">
                         <input type="checkbox">
                         <label for="id1">2806770 </label>
@@ -285,7 +285,7 @@
                         <a class="btn-more">View more</a>
                     </div>
                 </li>
-                <li>
+                <li class="accordion-row">
                     <div class="t-data by-id">
                         <input type="checkbox">
                         <label for="id1">2806770 </label>
@@ -321,7 +321,7 @@
                         <a class="btn-more">View more</a>
                     </div>
                 </li>
-                <li>
+                <li class="accordion-row">
                     <div class="t-data by-id">
                         <input type="checkbox">
                         <label for="id1">2806770 </label>
@@ -357,7 +357,7 @@
                         <a class="btn-more">View more</a>
                     </div>
                 </li>
-                <li>
+                <li class="accordion-row">
                     <div class="t-data by-id">
                         <input type="checkbox">
                         <label for="id1">2806770 </label>
@@ -393,7 +393,7 @@
                         <a class="btn-more">View more</a>
                     </div>
                 </li>
-                <li>
+                <li class="accordion-row">
                     <div class="t-data by-id">
                         <input type="checkbox">
                         <label for="id1">2806770 </label>
