--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -497,6 +497,7 @@ a{ outline: none;}
 	min-height: 785px;
 	
 	&.loading-content{
+		
 		&:before,
 		&:after{
 			opacity: 1;
@@ -506,6 +507,20 @@ a{ outline: none;}
 		&:before{
 			z-index: 83;
 		}
+	}
+	
+	.sideBar-active & {
+		
+		&:before {
+			margin: 0 0 0 54px;
+			
+			@include media('<widescreen') {
+				margin: 0 0 0 104px;
+			}
+			@include media('<tablet') {
+				margin: 0 0 0 -36px;
+			}
+		}	
 	}
 	
 	&:after{
@@ -526,7 +541,7 @@ a{ outline: none;}
 	}
 	&:before {
 		position: absolute;
-		top: 50%;
+		top: 380px;
 		left: 50%;
 		background: url(../images/ring1.gif);
 		background-size: cover;
@@ -534,19 +549,16 @@ a{ outline: none;}
 		width: 72px;
 		height: 72px;
 		z-index: -1;
-		margin: -100px 0 0 54px;
+		margin: 0 0 0 -56px;
 		opacity: 0;
 		visibility: hidden;
-		transition: opacity 0.4s ease,  visibility 0.4s ease, z-index 0.4s ease;
-		-webkit-transition: opacity 0.4s ease,  visibility 0.4s ease, z-index 0.4s ease;
-		-moz-transition: opacity 0.4s ease,  visibility 0.4s ease, z-index 0.4s ease;
-		-ms-transition: opacity 0.4s ease,  visibility 0.4s ease, z-index 0.4s ease;
+		transition: opacity 0.4s ease,  visibility 0.4s ease, z-index 0.4s ease,  margin 0.4s ease;
+		-webkit-transition: opacity 0.4s ease,  visibility 0.4s ease, z-index 0.4s ease,  margin 0.4s ease;
+		-moz-transition: opacity 0.4s ease,  visibility 0.4s ease, z-index 0.4s ease,  margin 0.4s ease;
+		-ms-transition: opacity 0.4s ease,  visibility 0.4s ease, z-index 0.4s ease,  margin 0.4s ease;
 		
-		@include media('<widescreen') {
-			margin: -100px 0 0 104px;
-		}
-		@include media('<tablet') {
-			margin: -36px 0 0 -36px;
+		@include media('<tablet'){
+			margin: 0 0 0 -36px;
 		}
 	}
 	
