add property form change

--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -1824,6 +1824,7 @@ input[type='submit'] {
   line-height: 0;
   letter-spacing: -4px;
   text-transform: capitalize;
+  max-width: 500px;
 }
 
 .addPropertyFormContainer .property-add .radio-holder > * {
