--- a/markup/scss/_add-property-form.scss
+++ b/markup/scss/_add-property-form.scss
@@ -576,6 +576,7 @@
 			@extend %listreset;
 			@include align-reset(top,12,15);
 			text-transform: capitalize;
+			max-width: 500px;
 			
 			&.error {
 				.fake-radio{
