--- a/markup/includes/add-property-form.html
+++ b/markup/includes/add-property-form.html
@@ -1,4 +1,4 @@
-<div class="addPropertyFormContainer" ng-controller="AddPropertyController" ng-init="initialize()">
+ <div class="addPropertyFormContainer" ng-controller="AddPropertyController" ng-init="initialize()">
     <div class="listing-holder">
         <a class="listing-opener"><span class="icon-menu"></span></a>
         <ul class="section-listing">
@@ -141,7 +141,7 @@
             <div class="layout add">
                 <div class="layout-holder error">
                     <span class="title">Price:</span>
-                    <input type="number" name="price" ng-model="form.data.price">
+                    <input type="number" name="price" ng-model="form.data.price" placeholder="Please enter your price">
                     <span class="error-text">This is error</span>
                 </div>
                 <span class="calculatedPrice"></span>
@@ -149,7 +149,7 @@
             <div class="layout add">
                 <div class="layout-holder error">
                     <span class="title">Land Area:</span>
-                    <input type="number" step="any" ng-model="form.data.landArea">
+                    <input type="number" step="any" ng-model="form.data.landArea" placeholder="Please enter land area">
                     <span class="error-text">This is error</span>
                 </div>
                 <div class="layout-holder error">
@@ -166,31 +166,31 @@
             <div class="layout add">
                 <div class="layout-holder error">
                     <span class="title">Property Title:</span>
-                    <input type="text" name="propertyTitle" ng-model="form.data.propertyTitle">
+                    <input type="text" name="propertyTitle" ng-model="form.data.propertyTitle" placeholder="Please enter property title">
                     <span class="error-text">This is error</span>
                 </div>
             </div>
             <div class="layout add">
                 <div class="layout-holder add error">
                     <span class="title">Description:</span>
-                    <textarea name="propertyDescription" ng-model="form.data.propertyDescription"></textarea>
+                    <textarea name="propertyDescription" ng-model="form.data.propertyDescription" placeholder="Please enter description"></textarea>
                     <span class="error-text">This is error</span>
                 </div>
             </div>
             <div class="layout add">
                 <div class="layout-holder error">
                     <span class="title">Bedrooms:</span>
-                    <input type="number">
+                    <input type="number" placeholder="Number of bedrooms">
                     <span class="error-text">This is error</span>
                 </div>
                 <div class="layout-holder error">
                     <span class="title">Bedrooms:</span>
-                    <input type="number">
+                    <input type="number" placeholder="Number of bedrooms">
                     <span class="error-text">This is error</span>
                 </div>
                 <div class="layout-holder error">
                     <span class="title">Bedrooms:</span>
-                    <input type="number">
+                    <input type="number" placeholder="Number of bedrooms">
                     <span class="error-text">This is error</span>
                 </div>
             </div>
@@ -205,7 +205,7 @@
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-                                <input type="number">
+                                <input type="number" placeholder="Number of bedrooms">
                             </div>
                         </li>
                         <li>
@@ -234,13 +234,13 @@
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-                                <input type="number">
+                                <input type="number" placeholder="Number of bedrooms">
                             </div>
                         </li>
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-                                <input type="number">
+                                <input type="number" placeholder="Number of bedrooms">
                             </div>
                         </li>
                     </ul>
@@ -251,7 +251,7 @@
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-                                <input type="number">
+                                <input type="number" placeholder="Number of bedrooms">
                             </div>
                         </li>
                         <li>
@@ -280,13 +280,13 @@
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-                                <input type="number">
+                                <input type="number" placeholder="Number of bedrooms">
                             </div>
                         </li>
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-                                <input type="number">
+                                <input type="number" placeholder="Number of bedrooms">
                             </div>
                         </li>
                     </ul>
@@ -297,7 +297,7 @@
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-                                <input type="number">
+                                <input type="number" placeholder="Number of bedrooms">
                             </div>
                         </li>
                         <li>
@@ -326,13 +326,13 @@
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-                                <input type="number">
+                                <input type="number" placeholder="Number of bedrooms">
                             </div>
                         </li>
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-                                <input type="number">
+                                <input type="number" placeholder="Number of bedrooms">
                             </div>
                         </li>
                     </ul>
@@ -343,7 +343,7 @@
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-                                <input type="number">
+                                <input type="number" placeholder="Number of bedrooms">
                             </div>
                         </li>
                         <li>
@@ -372,13 +372,13 @@
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-                                <input type="number">
+                                <input type="number" placeholder="Number of bedrooms">
                             </div>
                         </li>
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-                                <input type="number">
+                                <input type="number" placeholder="Number of bedrooms">
                             </div>
                         </li>
                     </ul>
@@ -389,7 +389,7 @@
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-                                <input type="number">
+                                <input type="number" placeholder="Number of bedrooms">
                             </div>
                         </li>
                         <li>
@@ -418,13 +418,13 @@
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-                                <input type="number">
+                                <input type="number" placeholder="Number of bedrooms">
                             </div>
                         </li>
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-                                <input type="number">
+                                <input type="number" placeholder="Number of bedrooms">
                             </div>
                         </li>
                     </ul>
@@ -514,31 +514,31 @@
                 </div>
                 <div class="layout-holder error">
                     <span class="title">contact person:</span>
-                    <input type="text" name="contact_person" ng-model="form.data.contactPerson">
+                    <input type="text" name="contact_person" ng-model="form.data.contactPerson" placeholder="Please Enter your contact person">
                     <span class="error-text">This is error</span>
                 </div>
             </div>
             <div class="layout add">
                 <div class="layout-holder error">
                     <span class="title">Phone:</span>
-                    <input type="text" name="phone" ng-model="form.data.phone">
+                    <input type="text" name="phone" ng-model="form.data.phone" placeholder="Please enter phone number">
                     <span class="error-text">This is error</span>
                 </div>
                 <div class="layout-holder error">
                     <span class="title">Cell:</span>
-                    <input type="text" name="cell" ng-model="form.data.cell">
+                    <input type="text" name="cell" ng-model="form.data.cell" placeholder="Please enter cell number">
                     <span class="error-text">This is error</span>
                 </div>
             </div>
             <div class="layout add">
                 <div class="layout-holder error">
                     <span class="title">fax:</span>
-                    <input type="text" name="title" ng-model="form.data.fax">
+                    <input type="text" name="title" ng-model="form.data.fax" placeholder="please enter Fax">
                     <span class="error-text">This is error</span>
                 </div>
                 <div class="layout-holder error">
                     <span class="title">email:</span>
-                    <input type="email" name="email" ng-model="form.data.email">
+                    <input type="email" name="email" ng-model="form.data.email" placeholder="Please enter your email">
                     <span class="error-text">This is error</span>
                 </div>
             </div>
