--- a/markup/scss/_property-listing.scss
+++ b/markup/scss/_property-listing.scss
@@ -177,6 +177,8 @@
 					
 					.numbering{
 						@include font(13,17);
+						@include align(middle);
+						min-width: 36px;
 						
 						&:before, &:after{
 							@include align(middle);
