--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -1124,6 +1124,24 @@ input[type='submit'] {
   }
 }
 
+.sideBar-active .addPropertyFormContainer select,
+.sideBar-active .addPropertyFormContainer input[type="text"],
+.sideBar-active .addPropertyFormContainer input[type="search"],
+.sideBar-active .addPropertyFormContainer input[type="number"],
+.sideBar-active .addPropertyFormContainer input[type="email"] {
+  max-width: 115px !important;
+}
+
+@media (max-width: 767px) {
+  .sideBar-active .addPropertyFormContainer select,
+  .sideBar-active .addPropertyFormContainer input[type="text"],
+  .sideBar-active .addPropertyFormContainer input[type="search"],
+  .sideBar-active .addPropertyFormContainer input[type="number"],
+  .sideBar-active .addPropertyFormContainer input[type="email"] {
+    max-width: inherit !important;
+  }
+}
+
 .sideBar-active.sideBar-active .addPropertyFormContainer:after {
   left: 300px;
 }
@@ -1619,6 +1637,7 @@ input[type='submit'] {
   }
 }
 
+.addPropertyFormContainer .property-add select,
 .addPropertyFormContainer .property-add input[type="text"],
 .addPropertyFormContainer .property-add input[type="search"],
 .addPropertyFormContainer .property-add input[type="number"],
@@ -1634,6 +1653,7 @@ input[type='submit'] {
 }
 
 @media (max-width: 1199px) {
+  .addPropertyFormContainer .property-add select,
   .addPropertyFormContainer .property-add input[type="text"],
   .addPropertyFormContainer .property-add input[type="search"],
   .addPropertyFormContainer .property-add input[type="number"],
@@ -1643,15 +1663,17 @@ input[type='submit'] {
 }
 
 @media (max-width: 1023px) {
+  .addPropertyFormContainer .property-add select,
   .addPropertyFormContainer .property-add input[type="text"],
   .addPropertyFormContainer .property-add input[type="search"],
   .addPropertyFormContainer .property-add input[type="number"],
   .addPropertyFormContainer .property-add input[type="email"] {
-    max-width: 115px;
+    max-width: 165px;
   }
 }
 
 @media (max-width: 767px) {
+  .addPropertyFormContainer .property-add select,
   .addPropertyFormContainer .property-add input[type="text"],
   .addPropertyFormContainer .property-add input[type="search"],
   .addPropertyFormContainer .property-add input[type="number"],
@@ -1661,7 +1683,9 @@ input[type='submit'] {
   }
 }
 
-.addPropertyFormContainer .property-add input[type="text"]:focus, .addPropertyFormContainer .property-add input[type="text"]:hover,
+.addPropertyFormContainer .property-add select:focus, .addPropertyFormContainer .property-add select:hover,
+.addPropertyFormContainer .property-add input[type="text"]:focus,
+.addPropertyFormContainer .property-add input[type="text"]:hover,
 .addPropertyFormContainer .property-add input[type="search"]:focus,
 .addPropertyFormContainer .property-add input[type="search"]:hover,
 .addPropertyFormContainer .property-add input[type="number"]:focus,
@@ -1972,7 +1996,7 @@ input[type='submit'] {
 
 @media (max-width: 1023px) {
   .addPropertyFormContainer .property-add .layout .layout-holder select {
-    width: 116px;
+    width: 165px;
   }
 }
 
@@ -2211,6 +2235,13 @@ input[type='submit'] {
   letter-spacing: 0;
 }
 
+@media (max-width: 1023px) {
+  .addPropertyFormContainer .image-uploading-area {
+    max-width: 480px;
+    margin: 30px auto 0;
+  }
+}
+
 @media (max-width: 767px) {
   .addPropertyFormContainer .image-uploading-area {
     margin: 30px -5px 0;
@@ -2296,6 +2327,20 @@ input[type='submit'] {
   }
 }
 
+@media (max-width: 1023px) {
+  .addPropertyFormContainer .image-uploading-area li .file-uploader {
+    width: 100%;
+    height: 180px;
+  }
+}
+
+@media (max-width: 767px) {
+  .addPropertyFormContainer .image-uploading-area li .file-uploader {
+    width: 100%;
+    height: 150px;
+  }
+}
+
 .addPropertyFormContainer .image-uploading-area li .file-uploader:hover:after {
   color: #58a36f;
 }
@@ -2336,7 +2381,7 @@ input[type='submit'] {
 
 .addPropertyFormContainer .image-uploading-area li .picture-name {
   display: block;
-  max-width: inherit;
+  max-width: inherit !important;
   margin: 0;
   width: 100%;
   border-width: 0 0 2px;
@@ -2785,6 +2830,9 @@ input[type='submit'] {
 .property-listing-holder .listing-cetegories-links ul li a .numbering {
   font-size: 13px;
   line-height: 17px;
+  display: inline-block;
+  vertical-align: middle;
+  min-width: 36px;
 }
 
 .property-listing-holder .listing-cetegories-links ul li a .numbering:before, .property-listing-holder .listing-cetegories-links ul li a .numbering:after {
@@ -5107,42 +5155,53 @@ a {
 .pager li {
   padding: 0 3px;
   margin: 0 0 5px;
+  position: relative;
 }
 
-.pager li.active a {
+.pager li b {
+  color: #363636;
+}
+
+.pager li.disable:after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 9;
+  content: '';
+}
+
+.pager li.disable a {
   color: #fff;
-  background: #133783;
-  border-color: #133783;
+  background: #bfc8d3;
+  border-color: #dde2e8;
+}
+
+.pager li .static {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 6px 0;
 }
 
 .pager li a {
   display: block;
   text-decoration: none;
-  color: #000;
-  border: 1px solid rgba(0, 0, 0, 0.4);
+  color: #fff;
+  border: 1px solid rgba(19, 55, 131, 0.8);
+  background: rgba(19, 55, 131, 0.4);
   padding: 5px 10px;
   transition: color 0.4s ease, background 0.4s ease;
   -webkit-transition: color 0.4s ease, background 0.4s ease;
   -moz-transition: color 0.4s ease, background 0.4s ease;
   -ms-transition: color 0.4s ease, background 0.4s ease;
+  min-width: 120px;
 }
 
 @media (max-width: 767px) {
   .pager li a {
     padding: 5px;
   }
-}
-
-.pager li a.previous, .pager li a.next {
-  border: 0;
-  padding: 6px 0;
-  vertical-align: middle;
-}
-
-.pager li a.previous:hover, .pager li a.next:hover {
-  background: transparent;
-  color: #000;
-  opacity: 0.8;
 }
 
 .pager li a:hover {
@@ -5241,7 +5300,7 @@ a {
 @media (max-width: 1023px) {
   #footer .cols-holder .col {
     width: 50%;
-    padding: 30px 5px 0;
+    padding: 30px 5px;
   }
 }
 
