--- a/markup/scss/_add-property-form.scss
+++ b/markup/scss/_add-property-form.scss
@@ -16,6 +16,18 @@
 		@include media('<tablet'){
 			padding:0;
 		}
+
+		select,
+		input[type="text"],
+		input[type="search"],
+		input[type="number"],
+		input[type="email"]{
+			max-width: 115px !important;
+
+			@include media('<tablet'){
+				max-width: inherit !important;
+			}
+		}
 	}
 	
 	.sideBar-active.sideBar-active & {
@@ -415,7 +427,7 @@
 				padding: 3px;
 			}
 		}
-		
+		select,
 		input[type="text"],
 		input[type="search"],
 		input[type="number"],
@@ -432,7 +444,7 @@
 			}
 			
 			@include media('<desktop'){
-				max-width: 115px;
+				max-width: 165px;
 			}
 			
 			@include media('<tablet'){
@@ -701,7 +713,7 @@
 					}
 					
 					@include media('<desktop'){
-						width: 116px;
+						width: 165px;
 					}
 					
 					@include media('<tablet'){
@@ -883,6 +895,11 @@
 		text-align: center;
 		margin: 30px 0 0;
 		
+		@include media('<desktop'){
+			max-width: 480px;
+			margin: 30px auto 0;
+		}
+
 		@include media('<tablet'){
 			margin: 30px -5px 0;
 		}
@@ -960,6 +977,13 @@
 						@include squar(100%, 110px);
 					}
 					
+					@include media('<desktop'){
+						@include squar(100%, 180px);
+					}
+					@include media('<tablet'){
+						@include squar(100%, 150px);
+					}
+
 					&:hover{
 						&:after{ color: $green;}
 					}
@@ -997,7 +1021,7 @@
 			}
 			.picture-name{
 				display: block;
-				max-width: inherit;
+				max-width: inherit !important;
 				margin: 0;
 				width: 100%;
 				border-width:0 0 2px;
