--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -909,40 +909,47 @@ a{ outline: none;}
 	li {
 		padding: 0 3px;
 		margin: 0 0 5px;
+		position: relative;
 		
-		&.active {
+		b {
+			color: $dove-black;
+		}
+
+		&.disable {
+			&:after{
+				position: absolute;
+				top: 0;
+				right: 0;
+				bottom: 0;
+				left: 0;
+				z-index: 9;
+				content: '';
+			}
 			a{
 				color: $white;
-				background: $defualt-blue;
-				border-color: $defualt-blue;
+				background: darken($light-gray, 10%);
+				border-color: $light-gray;
 			}
 		}
-		
+		.static {
+			@include align(middle);
+			padding: 6px 0;
+		}
 		a{
 			display: block;
 			text-decoration: none;
-			color: $black;
-			border: 1px solid rgba($black, 0.4);
+			color: $white;
+			border: 1px solid rgba($defualt-blue, 0.8);
+			background:  rgba($defualt-blue, 0.4);
 			padding: 5px 10px;
 			transition: color 0.4s ease, background 0.4s ease;
 			-webkit-transition: color 0.4s ease, background 0.4s ease;
 			-moz-transition: color 0.4s ease, background 0.4s ease;
 			-ms-transition: color 0.4s ease, background 0.4s ease;
+			min-width: 120px;
 			
 			@include media('<tablet'){
 				padding: 5px;
-			}
-			
-			&.previous, &.next {
-				border: 0;
-				padding: 6px 0;
-				vertical-align: middle;
-				
-				&:hover{
-					background: transparent;
-					color: $black;
-					opacity: 0.8;
-				}
 			}
 			
 			&:hover{
@@ -1010,7 +1017,7 @@ a{ outline: none;}
 			
 			@include media('<desktop'){
 				width: 50%;
-				padding: 30px 5px 0;
+				padding: 30px 5px;
 			}
 			
 			@include media('<tablet'){
