--- a/markup/includes/property-listing.html
+++ b/markup/includes/property-listing.html
@@ -432,9 +432,9 @@
             </ul>
         </div>
         <ul class="pager">
-            <li><a href="#"><span class="icon-chevron-thin-left"></span>Previous</a></li>
+            <li><a><span class="icon-chevron-thin-left"></span>Previous</a></li>
             <li><span class="static">Showing <em><b>2</b></em> of <em><b>551</b></em> pages</span></li>
-            <li class="disable"><a href="#">Next<span class="icon-chevron-thin-right"></span></a></li>
+            <li class="disable"><a>Next<span class="icon-chevron-thin-right"></span></a></li>
         </ul>
     </div>
 </div>
