--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -936,6 +936,7 @@ a{ outline: none;}
 			padding: 6px 0;
 		}
 		a{
+			cursor: pointer;
 			display: block;
 			text-decoration: none;
 			color: $white;
