--- a/markup/includes/user-update-page.html
+++ b/markup/includes/user-update-page.html
@@ -2,8 +2,14 @@
     <form class="registration-form">
         <strong class="heading-profile">My Profile.</strong>
         <div class="input-holder error">
-            <label class="icon-envelope" for="email1"></label>
-            <input type="email" placeholder="Enter Your Email Address" id="email1" name="email" required>
+            <label class="icon-envelope" for="fname"></label>
+            <input type="email" placeholder="Enter Your First Name" id="fname" name="email" required>
+            <span class="border"></span>
+            <span class="error-text">This is error</span>
+        </div>
+        <div class="input-holder error">
+            <label class="icon-envelope" for="lname"></label>
+            <input type="email" placeholder="Enter Your Last Name" id="lname" name="email" required>
             <span class="border"></span>
             <span class="error-text">This is error</span>
         </div>
@@ -19,8 +25,8 @@
             <span class="error-text">This is error</span>
         </div>
         <div class="input-holder error">
-            <label class="icon-user" for="name"></label>
-            <input type="text" placeholder="Enter Your Name" name="fullName" id="name" required>
+            <label class="icon-envelope" for="email1"></label>
+            <input type="email" placeholder="Enter Your Email Address" id="email1" name="email" required>
             <span class="border"></span>
             <span class="error-text">This is error</span>
         </div>
