--- a/markup/includes/user-update-page.html
+++ b/markup/includes/user-update-page.html
@@ -3,13 +3,13 @@
         <strong class="heading-profile">My Profile.</strong>
         <div class="input-holder error">
             <label class="icon-envelope" for="fname"></label>
-            <input type="email" placeholder="Enter Your First Name" id="fname" name="email" required>
+            <input type="email" placeholder="Enter Your First Name" id="fname" name="fname" required>
             <span class="border"></span>
             <span class="error-text">This is error</span>
         </div>
         <div class="input-holder error">
             <label class="icon-envelope" for="lname"></label>
-            <input type="email" placeholder="Enter Your Last Name" id="lname" name="email" required>
+            <input type="email" placeholder="Enter Your Last Name" id="lname" name="lname" required>
             <span class="border"></span>
             <span class="error-text">This is error</span>
         </div>
